# research

./: .gitignore  README.md  Untitled 1.canvas  ai_management_system_conference_paper_ideas.md  pyproject.toml  research_map.md  similar_conference_papers_ai_management_system.md
01_topic_proposal/: topic_proposal.md  topic_revision_log.md
02_related_work/: literature_review_matrix.md  paper_list.md  search_keywords.md
02_related_work/paper_summaries/: paper_01.md  paper_02.md  paper_03.md  paper_04.md  paper_05.md  paper_06.md  paper_07.md  paper_08.md  paper_09.md  paper_10.md  paper_11.md  paper_12.md  paper_13.md
03_problem_and_gap/: problem_statement.md  research_gap.md  research_questions.md
04_proposed_system/: ai_model_integration.md  data_flow.md  system_architecture.md  system_overview.md
05_methodology/: baseline.md  dataset.md  evaluation_metrics.md
06_experiment_results/: experiment_plan.md  experimental_setup.md  results.md  scenarios.json
06_experiment_results/data/: customers.csv  e1_per_scenario.csv  e1_per_scenario_llm.csv  e1_raw_answers_llm.csv  e1_s1_cache_llm.json  e2_external_construct_scores.csv  survey_responses.csv
06_experiment_results/scripts/: e1_chatbot_eval.py  e1_chatbot_eval_llm.py  (+6 more)
07_paper_draft/: abstract.md  conclusion.md  discussion.md  full_research_paper.md  methodology.md  paper_outline.md  related_work.md  results.md
08_final_submission/: main.tex
git ignore/: main.tex
research_lib/: __init__.py  utils.py
tests/: test_lib.py
weekly_reports/: week_01.md  week_02.md  week_03.md  week_04.md  week_05.md
(+11 files in other folders)
