[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research_lib"
version = "0.1.0"
description = "Helper library for research experiment scripts"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "google-generativeai",
    "openai",
    "anthropic",
    "xgboost"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["research_lib*"]
